Correctly order refs in batch-apply-object
It used to be that the meta refs were always sent last in the batch,
however, if the batch also contains heads and we advance their pointer
as a result of the batch being partially applied, the heads might
contain objects for which the corresponding change that brought them is
inaccessible.

Order the refs based on the following priority:
- patchsets
- meta refs
- branches
- tags
- everything else (refs/meta/config, refs/notes/review, ...)

This ensures that commits referenced by branches have an associated
navigable change.

Bug: Issue 540020492
Change-Id: Ib7f20495ad8a7fd7af31068b264cc3a56e990b8c